fix alignment of paginated list

--- a/src/routes/components/PaginatedList/style.scss
+++ b/src/routes/components/PaginatedList/style.scss
@@ -38,7 +38,8 @@
 }
 
 .cms-aligner.mod-bottom-right {
-  .paginated-list-item {
+  .paginated-list-item-name-container {
+    flex-direction: column;
     text-align: right;
   }
 
